--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,15 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-native", 
+    "esModuleInterop": true, 
+    "allowSyntheticDefaultImports": true, 
     "paths": {
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "skipLibCheck": true 
   },
   "include": [
     "**/*.ts",
@@ -15,3 +19,4 @@
     "expo-env.d.ts"
   ]
 }
+
